--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "googleapis": "^134.0.0"
+    "express": "^4.19.2",
+    "google-auth-library": "^9.8.0",
+    "google-spreadsheet": "^4.1.1",
+    "googleapis": "^134.0.0",
+    "http": "^0.0.1-security"
   }
 }
